TRIB-2722 seperage coverage into it's own profile